--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Social media web app",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index",
+    "start": "nodemon index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rahat",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "^1.4.5",
+    "ejs": "^3.0.2",
+    "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
+    "joi": "^14.3.1",
+    "mongoose": "^5.9.10"
   }
 }
