--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Rahat",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
