--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
+    "crypto": "^1.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "express-fileupload": "^1.1.7-alpha.3",
     "express-session": "^1.15.6",
+    "googleapis": "^51.0.0",
     "mongoose": "^5.4.6",
+    "multer": "^1.4.2",
     "passport": "^0.4.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0"
   }
 }
