--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "googleapis": "^51.0.0",
     "mongoose": "^5.4.6",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.8",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0"
